--- a/basic.html
+++ b/basic.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Webpage</title>
 </head>
 <body>
-    my name is gajjela vamsi krishna from kl university btech cse first year
+    <h1>Welcome to My Webpage</h1>
+    <p>This is a simple HTML page.</p>
+    <button onclick="alert('You clicked the button!')">Click Me</button>
 </body>
 </html>
+
+
+
+     sssss
